<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="projectViewModel"
            type="com.example.project.batman.viewmodel.MovieDetailViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/batman_movies"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/project_header1"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/item_horizontal_margin"
                android:layout_marginEnd="@dimen/item_horizontal_margin"
                android:orientation="vertical"
                android:padding="5dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:visibleGone="@{!isLoading}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgPoster"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:image_url="@{projectViewModel.movie.poster}" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/item_horizontal_margin"
                        android:layout_marginEnd="@dimen/item_horizontal_margin"
                        android:layout_weight="3"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/movie_title"
                            android:padding="6dp"
                            android:text="@{projectViewModel.movie.title}"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/project_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtYear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/movie_year"
                            android:padding="6dp"
                            android:text="@{projectViewModel.movie.year}"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/project_text" />

                        <TextView
                            android:id="@+id/txtType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/search_type"
                            android:padding="6dp"
                            android:text="@{projectViewModel.movie.type}"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/project_text" />
                    </LinearLayout>

                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="false"

                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.jaychan.view.MultipleTextView
                            android:id="@+id/txtPlot"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            app:prefixText="Plot : "
                            app:prefixTextColor= "@android:color/darker_gray"
                            app:contentText="@{projectViewModel.movie.plot}"
                            app:contentTextColor="@android:color/white"
                            android:textSize="@dimen/project_header2" />


                        <com.jaychan.view.MultipleTextView
                            android:id="@+id/txtDirector"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            app:prefixText="Director : "
                            app:prefixTextColor= "@android:color/darker_gray"
                            app:contentText="@{projectViewModel.movie.director}"
                            app:contentTextColor="@android:color/white"
                            android:textSize="@dimen/project_text" />


                        <com.jaychan.view.MultipleTextView
                            android:id="@+id/txtWriter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            app:prefixText="Writer : "
                            app:prefixTextColor= "@android:color/darker_gray"
                            app:contentText="@{projectViewModel.movie.writer}"
                            app:contentTextColor="@android:color/white"
                            android:textSize="@dimen/project_text" />

                        <com.jaychan.view.MultipleTextView
                            android:id="@+id/txtLanguage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            app:prefixText="Language : "
                            app:prefixTextColor= "@android:color/darker_gray"
                            app:contentText="@{projectViewModel.movie.language}"
                            app:contentTextColor="@android:color/white"
                            android:textSize="@dimen/project_text" />


                    </LinearLayout>
                </ScrollView>
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/loading_project"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_movie"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:visibleGone="@{isLoading}" />


    </FrameLayout>
</layout>